# rviz_odom_trail_plugin

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml  plugin_description.xml
include/rviz_odom_trail_plugin/: OdomTrailDisplay.h
src/rviz_odom_trail_plugin/: OdomTrailDisplay.cpp
